src/test/run-pass/boxed-trait-with-vstore.rs
trait Foo {
    fn foo() {}
}

impl int : Foo {
    fn foo() {
        io::println("Hello world!");
    }
}

fn main() {
    let x = 3 as @Foo;
    x.foo();
}

